# JNITest

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jeryzhang/common/jnitest/: JNIUtils.java  MainActivity.java
gen-libs/: build.gradle  vCMakeLists.txt
gen-libs/src/main/: AndroidManifest.xml
gen-libs/src/main/cpp/: CMakeLists.txt
gen-libs/src/main/cpp/gmath/src/: JNIHello.cpp
gen-libs/src/main/cpp/gperf/: CMakeLists.txt
gen-libs/src/main/cpp/gperf/src/: native-lib.cpp  native-lib.h
gradle/wrapper/: gradle-wrapper.properties
